<resources>
    <string name="app_name">Audio Recorder</string>

    <string-array name="sample_rate_text">
        <item>48 kHz</item>
        <item>44.1 kHz (CD)</item>
        <item>32 kHz</item>
        <item>22 kHz</item>
        <item>16 kHz (default)</item>
        <item>11 kHz</item>
        <item>8 kHz (telephone)</item>
    </string-array>

    <string-array name="source_text">
        <item>Mic</item>
        <item>Unprocessed</item>
        <item>Bluetooth</item>
    </string-array>

    <string-array name="themes_text">
        <item>Theme White</item>
        <item>Theme Dark</item>
    </string-array>

    <string-array name="channels_text">
        <item>Mono (default)</item>
        <item>Stereo</item>
    </string-array>

    <string name="no_folder_app">No folder view application installed</string>
    <string name="hold_by_call">pause (hold by call)</string>
    <string name="recording_status_recording">recording</string>
    <string name="recording_status_encoding">encoding</string>
    <string name="recording_status_pause">pause</string>
    <string name="recording_status_edit">edit</string>
    <string name="confirm_cancel">Confirm cancel</string>
    <string name="encoding_title">Encoding...</string>
    <string name="pause_title">Pause...</string>
    <string name="recording_title">Recording</string>
    <string name="open_recording_folder">Open Recording Folder</string>
    <string name="recording_list_is_empty">Recording List is Empty\n\nClick Record to Start Recording</string>
    <string name="record_button">Record</string>
    <string name="cut_button">Cut</string>
    <string name="stop_button">Stop</string>
    <string name="cancel_button">Cancel</string>
    <string name="pause_button">Pause</string>

    <string name="pref_storage_title">Storage Path</string>
    <string name="pref_rate_title">Sample Rate</string>
    <string name="pref_encoding_title">Encoding</string>
    <string name="pref_encoding_summary">Output file formats (.wav, .m4a, ...)</string>
    <string name="pref_mode_title">Mode</string>
    <string name="pref_mode_summary">Recording channels</string>
    <string name="pref_nameformat_title">Name Format</string>
    <string name="pref_pausecalls_title">Pause During Calls</string>
    <string name="pref_pausecalls_summary">Stop recording on answering and continue on hangup</string>
    <string name="pref_silence_title">Silence Mode</string>
    <string name="pref_silence_summary">Put phone in \'silence mode\' during recording</string>
    <string name="pref_lockscreen_title">Lockscreen Controls</string>
    <string name="pref_lockscreen_summary">Show controls when phone is locked</string>
    <string name="pref_theme_title">Application Theme</string>
    <string name="pref_theme_summary">Set application theme (dark / light)</string>
    <string name="pref_application">Application</string>
    <string name="pref_recordings">Recordings</string>
    <string name="pref_fly_title">Encoding on Fly</string>
    <string name="pref_fly_summary">Enabling encoding on fly disables editing, and crash recovery</string>
    <string name="hold_by_bluetooth">pause (bluetooth disconnected)</string>
    <string name="menu_search">Search</string>
    <string name="save_as_wav">Save as WAV</string>
</resources>
