<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_recordings">
        <com.github.axet.androidlibrary.widgets.StoragePathPreferenceCompat
            android:defaultValue="Audio Recorder"
            android:key="storage_path"
            android:summary="/sdcard/some/"
            android:title="@string/pref_storage_title" />

        <ListPreference
            android:defaultValue="mic"
            android:entries="@array/source_text"
            android:entryValues="@array/source_values"
            android:key="bluetooth"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary=""
            android:title="@string/pref_source_title" />

        <ListPreference
            android:defaultValue="16000"
            android:entries="@array/sample_rate_text"
            android:entryValues="@array/sample_rate_values"
            android:key="sample_rate"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="44100"
            android:title="@string/pref_rate_title" />

        <ListPreference
            android:defaultValue="ogg"
            android:entries="@array/encodings_text"
            android:entryValues="@array/encodings_values"
            android:key="encoding"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/pref_encoding_summary"
            android:title="@string/pref_encoding_title" />

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/channels_text"
            android:entryValues="@array/channels_values"
            android:key="channels"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/pref_mode_summary"
            android:title="@string/pref_mode_title" />

        <ListPreference
            android:defaultValue="%s"
            android:entries="@array/format_text"
            android:entryValues="@array/format_values"
            android:key="format"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="2015-12-31 22:11:34"
            android:title="@string/pref_nameformat_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_filters">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="voice"
            android:summary="@string/pref_voice_summary"
            android:title="@string/pref_voice_title" />
        <com.github.axet.audiolibrary.widgets.RecordingVolumePreference
            android:defaultValue="1"
            android:key="volume"
            android:summary=""
            android:title="@string/pref_volume_title" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="skip"
            android:summary="@string/pref_skip_summary"
            android:title="@string/pref_skip_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_application">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="fly"
            android:summary="@string/pref_fly_summary"
            android:title="@string/pref_fly_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="call"
            android:summary="@string/pref_pausecalls_summary"
            android:title="@string/pref_pausecalls_title" />

        <com.github.axet.androidlibrary.widgets.SilencePreferenceCompat
            android:defaultValue="false"
            android:key="silence"
            android:summary="@string/pref_silence_summary"
            android:title="@string/pref_silence_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="controls"
            android:summary="@string/pref_lockscreen_summary"
            android:title="@string/pref_lockscreen_title" />

        <ListPreference
            android:defaultValue="@string/Theme_Light"
            android:entries="@array/themes_text"
            android:entryValues="@array/themes_values"
            android:key="theme"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:summary="@string/pref_theme_summary"
            android:title="@string/pref_theme_title" />
    </PreferenceCategory>
</PreferenceScreen>
